cmake_minimum_required(VERSION 3.0)
project(NextCraft)
find_package(glfw3 CONFIG REQUIRED)
find_package(libpng CONFIG REQUIRED)
#find_package(unofficial-libuv CONFIG REQUIRED)
find_package(freetype CONFIG REQUIRED)
include_directories(./src ${GLFW3_INCLUDE_DIRS})
install(DIRECTORY deps/ DESTINATION ${CMAKE_BINARY_DIR})
FILE(GLOB SOURCE_FILES src/*.cpp)
add_executable(NextCraft ${SOURCE_FILES} ./src/glad.c)
target_link_libraries(NextCraft PRIVATE freetype glfw3 png)
#target_include_directories(NextCraft PRIVATE ${FREETYPE_INCLUDE_DIRS} ${GLFW3_INCLUDE_DIRS})